--- a/src/less/res.less
+++ b/src/less/res.less
@@ -743,13 +743,12 @@
     padding: 0;
     margin-top: 0;
     position: absolute;
-    right: 56px;
+    right: 48px;
     top:38px;
     height: 31px;
-    width: 180px;
+    width: 30px;
     color: #fff;
-    padding-left: 12px;
-    margin-left: 40px;
+    padding-right: 8px;
     text-align: right;
 }
 .addLatestPrepare i{
@@ -759,11 +758,11 @@
     padding: 0;
     margin-top: 0;
     position: absolute;
-    right: 30px;
+    padding-right: 8px;
+    right: 22px;
     top:3px;
     height: 31px;
-    width: 180px;
-    padding-left: 12px;
+    width: 30px;
     color: #fff;
     margin-right: 30px;
     text-align: right;
