--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -97,7 +97,7 @@
 	<div class="modal-body modal-prepare-body upload-modal-body">
 		<div class="modal-prepare-header">上传资源</div>
 		<div class="edit-upload-res">
-			<div class="row">
+			<div class="row" ng-show="showHeader">
 				<div class="col-sm-2">资源列表：</div>
 				<table class="col-sm-10 table table-striped table-hover table-bordered">
 					<tr>
@@ -110,15 +110,15 @@
 					</tr>
 				</table>
 			</div>
-			<span class="sp-label">为方便资源的管理，请填写完整的资源信息</span>
+			<span class="sp-label" ng-show="showHeader">为方便资源的管理，请填写完整的资源信息</span>
+			<div class="empty-header" ng-hide="showHeader"></div>
 			<!--<span class="upload-all" ng-class="addAll? 'add-active':''" ng-click="addAll=true">方式一： 为资源添加统一的信息</span>
 			<span class="upload-onebyone" ng-class="!addAll? 'add-active':''" ng-click="addAll=false">方式二： 为每个资源单独添加信息</span>-->
-
 			<div class="edit-detail-box">
 				<div class="edit-list" ng-show="!addAll">
 					<span class="red-tip">*</span>
 					<span class="sp-label">资源名称:</span>
-					<input type="text" ng-model="res.resTitle"/>
+					<input type="text" ng-model="res.title"/>
 				</div>
 				<div class="edit-list" ng-show="addAll">
 					<span class="red-tip">*</span>
@@ -254,3 +254,138 @@
 		</div>
 	</div>
 </script>
+
+<!-- 编辑上传资源模态框 -->
+<!--<script type="text/ng-template" id="edit-upload.html">
+<div class="edit-res-modal">
+	<div class="modal-header">
+		<h5>编辑资源</h5>
+	</div>
+    <div class="modal-body">
+    	<p>为方便资源的管理，请填写完整的资源信息</p>
+    	<div class="edit-detail-box">
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">资源名称</span>
+    			<input type="text" ng-model="res.title" />
+    			<button class="btn-op" ng-click="setResTitle(res.title)">重新上传</button>
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">资源类型</span>
+    			<span class="tag active" ng-bind="res.unifyType"></span>
+    		</div>
+    		<div class="edit-list">
+    			<div class="edit-list-left">
+    				<span class="red-tip">*</span>
+    				<span class="sp-label">上传至：</span>
+    			</div>
+    			<div class="edit-list-right">
+    				<div class="select-loc-box">
+		    			<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger">
+									<span class="select-current" href="" ng-bind="VM.currentGrade"></span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span ng-bind="grade.name"></span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger">
+									<span class="select-current">{{VM.currentSubject.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger" ng-click="closeCurrentVersion()">
+									<span class="select-current" href="">{{VM.currentVersion.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="version in VM.version track by $index" ng-class="VM.currentVersionSeclet[$index]?'selected':''" ng-click="VM.selectVersion($index)"><span>{{ version.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger" ng-click="closeCurrentMaterial()">
+									<span class="select-current" href="">{{VM.currentMaterial.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="material in VM.material track by $index" ng-class="VM.currentMaterialSeclet[$index]?'selected':''" ng-click="VM.selectMaterial($index)"><span>{{ material.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+						<div class="select-nav-item" id="catogry-trigger" ng-click="treeTrigger()" >
+								<div class="menu-drop">
+									<div class="trigger">
+										<span class="select-current" href="">{{ currentNode.label }}</span>
+										<i class="icon-angle-down"></i>
+										<i class="icon-angle-up"></i>
+									</div>
+									<div class="menu-drop-main">
+										<ul class="menu-drop-list tree-embed my-upload-tree" ng-show="showTree">
+											<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
+										     	{{node.label}}
+										 	</treecontrol>
+										</ul>
+									</div>
+								</div>
+							</div>
+						<div class="clearfix"></div>
+    				</div>
+
+    			</div>
+    			<div class="clearfix"></div>
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">共享范围</span>
+    			<span class="tag active">仅自己可见</span>
+    			<span class="tag">本校可见</span>
+    			<span class="tag">本区可见</span>
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">关键词</span>
+    			<input type="text" ng-model="res.keywords" class="keyword-input" placeholder="多个关键词用分号隔开" />
+    		</div>
+    		<div class="edit-list">
+    			<span class="sp-label">资源介绍</span>
+    			<textarea ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
+    			</textarea>
+    			<!-- <span class="sp-count-word"><span ng-model="res.description.length"></span>/200</span>
+    		</div>
+    	</div>
+    </div>
+    <div class="modal-footer">
+    	<button class="btn-general" ng-click="editDone()">确定</button>
+		<button class="btn-general" ng-click="close()">取消</button>
+    </div>
+</div>
+</script>-->
