--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -37,6 +37,9 @@
     padding: 6px 30px;
     padding-left: 100px;
 }
+.upload-modal .empty-header{
+    height: 60px;
+}
 .red-tip{
     color: #DF3D6D;
     font-size: 22px;
