--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -74,17 +74,22 @@
 .slide-thumbnail li{
     float: left;
     width: 14.5%;
-    margin: 6px;  
+    margin: 6px;
+    height: 180px;
+    position: relative;
 }
 .slide-thumbnail img{
     width: 100%;
-    height: 100px;
+//  height: 100px;
 }
 .slide-thumbnail img:hover{
     width: 99%;
     border: 2px solid #009CD6;
 }
-
+.slide-title{
+    position: absolute;
+    bottom: 0;
+}
 .slide-list {
     background: @slideBgColor;
     color: #fff;
