--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -235,6 +235,7 @@
 .prepare-all-list{
     background: #fff;
     margin: 10px 0 50px 0;
+    min-height: 450px;
 }
 .prepare-all-header-img{
     margin-top: -33px;
