--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -26,65 +26,79 @@
 	<div ng-show="VM.isList" data-ng-include="'/coms/prepare/views/prepare-content-list.html'"></div>
 </div>
 
-
+<!-- 新建备课夹模态框 -->
 <script type="text/ng-template" id="modal-prepare.html">
 	<div class="modal-body modal-prepare-body">
 		<div class="modal-prepare-header">新建备课夹</div>
-		<div class="modal-prepare-content">
-			<div class="modal-inner-content">
+		<div class="select-prepare-content">
+			<div class="select-inner-content">
 				<div class="modal-catogry">
-					<span>教材目录：</span>
-					<span class="catogry-trigger" id="catogry-trigger" ng-click="treeTrigger()" >
-						<span class="select-current" href="">{{ currentNode.label }}</span>
-						<i class="icon-angle-down"></i>
-						<i class="icon-angle-up"></i>
-					</span>
-					<div class="tree-embed" ng-show="showTree">
-						<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
-					     {{node.label}}
-					 	</treecontrol>
+					<span>选择目录：</span><br>
+					<div class="tree-embed">
+						<treecontrol id="tree-embed" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" selected-node="selected" options="opts">
+							{{node.label}}
+						</treecontrol>
 					</div>
-					
 				</div>
-				<div class="modal-prepare-name">
-					<span>备课夹名称：</span>
-					<input class="prepare-name-input" ng-model="prepareName"/>
+				<div class="prepare-seperate"><i class="icon-angle-right"></i><i class="icon-angle-right"></i></div>
+				<div class="prepare-title-box">
+					<input class="prepare-title-input" ng-model="prepareName" value="prepareName">
+					<button class="btn-op">确定</button>
 				</div>
 			</div>
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
+			<div class="clearfix"></div>
+		</div>
+		<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
 			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareCancel()">取消</button>
-		</div>	
+	</div>
+</script>
+
+<!-- 移动/复制备课夹模态框 -->
+<script type="text/ng-template" id="modal-prepare-op.html">
+	<div class="modal-body">
+		<div class="modal-prepare-header" ng-bind="opName"></div>
+		<div class="select-prepare-content">
+			<div class="select-inner-content">
+				<div class="modal-catogry">
+					<span>选择目录：</span><br>
+					<div class="tree-embed">
+						<treecontrol id="tree-embed" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" selected-node="selected" options="opts">
+							{{node.label}}
+						</treecontrol>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+		<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
+			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareCancel()">取消</button>
 	</div>
 </script>
 
 <script type="text/ng-template" id="move-prepare.html">
 	<div class="modal-body modal-prepare-body">
-		<div class="modal-prepare-header">移动到</div>
-		<div class="modal-prepare-content">
-			<div class="modal-inner-content">
+		<div class="modal-prepare-header">新建备课夹</div>
+		<div class="select-prepare-content">
+			<div class="select-inner-content">
 				<div class="modal-catogry">
-					<span>教材目录：</span>
-					<span class="catogry-trigger" id="catogry-trigger" ng-click="treeTrigger()" >
-						<span class="select-current" href="">{{ currentNode.label }}</span>
-						<i class="icon-angle-down"></i>
-						<i class="icon-angle-up"></i>
-					</span>
-					<div class="tree-embed" ng-show="showTree">
-						<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
-					     {{node.label}}
-					 	</treecontrol>
+					<span>选择目录：</span><br>
+					<div class="tree-embed">
+						<treecontrol id="tree-embed" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" selected-node="selected" options="opts">
+							{{node.label}}
+						</treecontrol>
 					</div>
 				</div>
-				<div class="modal-prepare-name">
+				<div class="prepare-title-box modal-prepare-name">
 					<span>备课夹名称：</span>
 					<select ng-change="selectPrepare(currentPrepare)" ng-model="currentPrepare">
 						<option ng-repeat="pp in prepares track by $index" ng-bind="pp.title" value="{{pp}}"></option>
 					</select>
 				</div>
 			</div>
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="moveOk()">确定</button>
+			<div class="clearfix"></div>
+		</div>
+		<button class="btn btn-lg btn-success btn-custom-modal" ng-click="moveOK()">确定</button>
 			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="moveCancel()">取消</button>
-		</div>	
 	</div>
 </script>
 
