--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -136,6 +136,10 @@
       background: @color4;
     }
 
+    .item-active {
+        background: @color4;
+    }
+
     .item-info{
        display: inline-block;
        margin-left: 10px;
