--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -95,7 +95,7 @@
     color: #fff;
     padding: 10px;
     text-align: center;
-    max-height: 700px;
+    height: 700px;
     overflow-y: auto;
     margin-top: 15px;
 }
