--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -28,6 +28,9 @@
     .prepare-list{
         margin:10px 0;
     }
+    img{
+        cursor: pointer;
+    }
 
     .list-header{
         line-height: 40px;
