--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -2,7 +2,7 @@
 <div id="prepare-content">
 	<div class="prepare-list" ng-repeat="list in listData track by $index" ng-init="parentIndex = $index">
 		<div class="list-header" ng-click="switch($index)">
-			<span class="list-header-title" ng-hide="list.editPrepareTitle" title="list.title" ng-bind="'{{$index+1}}' + '、' + '{{list.title}}'"></span>
+			<span class="list-header-title" ng-hide="list.editPrepareTitle" title="list.title">{{$index+1}}、{{list.title}}</span>
 			<span class="new-prepare-title" ng-show="list.editPrepareTitle"><input type="text" ng-model="list.title" value="list.title"><button class="btn-op" ng-click="setPrepareTitle($index)">确定</button></span>
 			<i class="icon-edit edit-prepare" ng-click="editPrepare($index)"></i> 
 			<i class="icon-trash" ng-click="deletePrepare($index,$event)"></i>
@@ -21,7 +21,7 @@
 		<div class="list-content" ng-show="list.active">
 			<div ng-show="list.children.length>0">
 				<span class="hold-on" ui-sref="systemres"><i class="icon-plus-sign"></i>继续逛逛</span>
-				<span class="hold-on local-res" ng-click="uploadRes(list.id)"><i class="icon-plus-sign"></i>本地资源</span>
+				<span class="hold-on local-res" ng-click="uploadRes(list.id, $index)"><i class="icon-plus-sign"></i>本地资源</span>
 				<div class="clearfix">
 					
 				</div>
@@ -35,7 +35,7 @@
 						<res-size data-value="{{item.size}}"></res-size>
 					</div>
 					<div class="prepare-download">
-						<img class="op-img" src="assets/img/prepare/download_icon.png" ng-click="zipPrepare(item.resId, item.fromFlag)">
+						<img class="op-img" src="assets/img/prepare/download_icon.png" ng-click="resDownload(item.resId, item.fromFlag)">
 					</div>
 					<div class="sp-edit">
 						<img class="op-img" src="assets/img/prepare/edit_icon.png" default-src="assets/img/prepare/edit_icon.png" active-src="assets/img/prepare/edit_icon_active.png"/>
@@ -60,7 +60,7 @@
 			<div class="list-item list-no-res" ng-show="list.children.length == 0">
 				<img src="assets/img/prepare/add_res.png" />
 				<i ui-sref="systemres">系统资源</i>
-				<i ng-click="uploadRes(list.id)">本地资源</i>
+				<i ng-click="uploadRes(list.id, $index)">本地资源</i>
 				<!-- 上传模态框 -->
 				<div data-ng-include="'/coms/layout/modal/modal/upload-modal.html'"></div>
 			</div>
@@ -75,8 +75,3 @@
 			</div>
 		</div> -->
 </div>
-
-
-<!-- 模态框（Modal） -->
-<!-- 上传模态框 -->
-<div data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div>
