--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -118,7 +118,18 @@
 #prepare-content .list-content{
     margin: 10px;
 }
-
+.move-prepare-content{
+    height: 430px;
+    background: #fff;
+    padding: 15px;
+    text-align: center;
+}
+.move-prepare-content .tree-embed{
+    left: 160px;
+}
+.move-prepare-content .select-inner-content{
+     height: 340px;
+}
 .list-content {
 
     .hold-on, .list-content .local-res{
