--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -56,8 +56,8 @@
 <!-- 移动/复制备课夹模态框 -->
 <script type="text/ng-template" id="modal-prepare-op.html">
 	<div class="modal-body">
-		<div class="modal-prepare-header" ng-bind="opName"></div>
-		<div class="select-prepare-content">
+		<div class="modal-prepare-header">{{opName}}</div>
+		<div class="move-prepare-content">
 			<div class="select-inner-content">
 				<div class="modal-catogry">
 					<span>选择目录：</span><br>
@@ -69,9 +69,9 @@
 				</div>
 			</div>
 			<div class="clearfix"></div>
+			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
+		<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareCancel()">取消</button>
 		</div>
-		<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
-			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareCancel()">取消</button>
 	</div>
 </script>
 
