--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -35,7 +35,7 @@
 						<res-size data-value="{{item.size}}"></res-size>
 					</div>
 					<div class="prepare-download">
-						<img class="op-img" src="assets/img/prepare/download_icon.png" ng-click="resDownload(item.resId, item.fromFlag)">
+						<img class="op-img" src="assets/img/prepare/download_icon.png" ng-click="resDownloadByResId(item.resId, item.fromFlag)">
 					</div>
 					<div class="sp-edit">
 						<img class="op-img" src="assets/img/prepare/edit_icon.png" default-src="assets/img/prepare/edit_icon.png" active-src="assets/img/prepare/edit_icon_active.png"/>
