--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -21,7 +21,7 @@
 }
 .slide-container .slide-arrow2{
     position: absolute;
-    top:26%;
+    top:50px;
     z-index: 9999999;
     color: #fff;
     color: #12879A;
@@ -108,4 +108,10 @@
 }
 .slide-list img{
     width: 100%;
+}
+.slidesCustom{
+    cursor: pointer;    
+}
+.slidesCustom .slide-title{
+    width: 160px;    
 }
